# Tux-Ultimate

./: .gitignore  1  Cargo.toml  LICENSE  Makefile  README.md  build.py  compile_shaders.py  run.py
assets/: config.toml
assets/shaders/: shader.wgsl
res/: config.toml  todo.md
res/characters/generic/: walking.glb
res/shaders/: animation.frag.glsl  animation.vert.glsl  model.frag.glsl  model.vert.glsl  rect.frag.glsl
resources/: config.toml  config.txt
resources/shaders/: rect.vert.glsl
src/: README.md  header_includes.h  main.c  main.rs
src/engine/: audio.c  audio.h  camera.c  camera.h  game_state.h  gpu_pipeline.c  gpu_pipeline.h  gui.rs  input.c  input.h  mod.rs  physics.h  renderer.c  renderer.h  text_atlas.c  text_atlas.h  ui.c  ui.h  world.h
src/engine/assets/: handle.rs  mod.rs  server.rs  storage.rs
src/engine/graphics/: gpu_pipeline.c  gpu_pipeline.h  material.h  model.c  model.h  render.c  render.h  skeleton.h  test.c
src/engine/io/: keyboard.rs
src/engine/net/: client.rs
src/engine/renderer/: bind_group.rs  bind_group_layout.rs  context.rs  mesh_builder.rs  mod.rs  model_loader.rs  pipeline.rs  pipeline_builder.rs
src/engine/scene/: camera.rs
src/game/: entity.h
src/net/client/: client.c  client.h
src/net/server/: server.c  server.h
src/net/shared/: packet.c  packet.h  packet_queue.c  packet_queue.h
src/shaders/: rect.frag.glsl  rect.vert.glsl
src/util/: config.c  config.h  config.rs  defines.h  dynamic_array.h  hash_table.c  hash_table.h  logger.c  resource_loader.c  resource_loader.h  vector.c  vector.h
(+1 files in other folders)
