[package]
name = "Ultimate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
env_logger = "0.11.11"
glm = "0.3.0"
gltf = "1.4.1"
image = "0.25.10"
log = "0.4.33"
pollster = "1.0.1"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"
wgpu = "30.0.0"
winit = "0.30.13"

